--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
           <h2>Considerations when <br />stylin’ components:</h2>
           <ol>
             <li class="fragment">Manages <u>Specificity</u> and the Cascade</li>
-            <li class="fragment">Highly Maintainable (Updating/Refactoring)</li>
             <li class="fragment">High Reusability</li>
+            <li class="fragment">Highly Maintainable (Updating/Refactoring)</li>
             <li class="fragment">
               Good <abbr title="Developer Experience">DX</abbr>
               <small style="vertical-align: middle">
@@ -208,11 +208,11 @@
       el.insertBefore(
         RevealCSSSnippet({
           cssValue: `#example {
-	color: #ff0;
+	color: gold;
 }
 
 .example {
-	color: #f0f;
+	color: purple;
 }`,
         }),
         el.querySelector("div")
